--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.2",
     "ethers": "5.6.6",
     "next": "12.1.6",
     "react": "17.0.0",
@@ -19,6 +20,7 @@
     "autoprefixer": "10.4.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "eslint-plugin-react": "^7.30.0",
     "postcss": "8.4.14",
     "tailwindcss": "3.0.24"
   }
